[package]
name = "control-panel"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
windows-core = "0.61.0"
windows-link = "0.1.1"

[dependencies.windows]
version = "0.61.1"
features = [
  "Win32_Devices_FunctionDiscovery",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_GdiPlus",
  "Win32_Media_Audio",
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_LibraryLoader",
  "Win32_System_RemoteDesktop",
  "Win32_System_Threading",
  "Win32_System_Variant",
  "Win32_UI_Shell_PropertiesSystem",
  "Win32_UI_WindowsAndMessaging",
]
